# MTGCardUsageAnalyzer

./: .gitattributes  .gitignore  README.md  analyze.py  card_analyzer.py  card_groups.py  data_visualization.py  gui.py  pyproject.toml  samplePrefs.xml  scrape.py  scraper.py  utils.py
Data/: double_cards.json  full_modern.json  modern.json  scraped_urls.txt
