[project]
name = "mtg-card-usage-analyzer"
description = "Highly specific search tools and scraper for discovering how and why Magic: the Gathering decks run specific cards in a given metagame."
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "requests>=2.32.2",
    "selenium>=4.21.0",
    "chromedriver-autoinstaller>=0.6.4",
    "tkcalendar>=1.6.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10",
    "unidecode>=1.4.0"
]
readme = "README.md"
keywords = ["Magic: The Gathering", "MTG", "MTGO", "Deckbuilding"]
authors = [{name = "Nick Kogut", email="nkogut4444@gmail.com"}]